--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
+Babel==2.5.1
 certifi==2017.11.5
 chardet==3.0.4
 confusable-homoglyphs==2.0.2
 dj-database-url==0.4.2
 Django==1.11.7
 django-bootstrap3==9.1.0
+django-contrib-comments==1.8.0
+django-phonenumber-field==1.3.0
 django-registration==2.3
 gunicorn==19.7.1
 idna==2.6
 olefile==0.44
+phonenumberslite==8.8.6
 Pillow==4.3.0
+pkg-resources==0.0.0
 psycopg2==2.7.3.2
 python-decouple==3.1
 pytz==2017.3
 requests==2.18.4
+tmdbsimple==1.8.0
 urllib3==1.22
 whitenoise==3.3.1
