--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap3==9.1.0
 django-contrib-comments==1.8.0
 django-phonenumber-field==1.3.0
 django-registration==2.3
+django-vote==2.1.5
 gunicorn==19.7.1
 idna==2.6
 olefile==0.44
@@ -19,5 +20,5 @@ pytz==2017.3
 requests==2.18.4
 tmdbsimple==1.8.0
 urllib3==1.22
-whitenoise==3.3.1
 votes==1.0.1
+whitenoise==3.3.1
